2007-09-06 Fred Kiefer <FredKiefer@gmx.de>
	
	* Headers/AppKit/NSCell.h: Add ivar in_editing, which gets set,
	during the editing/selection of the cell.
	* Source/NSCell.m (-_setupTextWithFrame:..., endEditing:): Set/
	clear the in_editing flag.
	* Source/NSActionCell.m (-objectValue, -attributedStringValue,
	-intValue, -floatValue, -doubleValue, -stringValue): Check flag
	in_editing before validating the editing.
	
2007-09-05 Nicolas Roard <nicolas@roard.com>
	
	* Source/NSView.m (-scrollRect:by:): reversed the coordinates 
	of destPoint (substract instead of add), to match OSX behaviour. 
	* Source/NSClipView.m (-setBoundsOrigin): reversed the coordinates
	of the call to scrollRect:by:, to match OSX behaviour.

2007-09-05 Fred Kiefer <FredKiefer@gmx.de>
	
	* Source/NSWindow.m (-sendEvent:, -selectKeyViewFollowingView:,
	-selectKeyViewPrecedingView:, -selectNextKeyView:,
	-selectPreviousKeyView:): Handle case when makeFirstResonder:
	fails. 

2007-09-05 Fred Kiefer <FredKiefer@gmx.de>
	
	* Source/NSLayoutManager.m
	(-glyphIndexForPoint:...fractionOfDistanceThroughGlyph:): Don't
	ignore invisible glyphs.
	* Source/NSTextView.m (-_characterIndexForPoint:respectFraction:):
	New helper method.
	* Source/NSTextView.m (-characterIndexForPoint:): Correct to use
	screen coordinates.
	* Source/NSTextView.m (-draggingEntered:, -draggingUpdated:,
	-mouseDown:): Use new helper method.
	* Source/NSAlert.m (-_setupPanel): Check count of buttons.
	* Source/NSDocument.m (-setFileName:, -setFileURL:): Set url and
	file name always together.
	* Source/NSDocument.m (-dataOfType:error:,
	-fileWrapperOfType:error:, -readFromFileWrapper:ofType:error:,
	-readFromURL:ofType:error:, -writeSafelyToURL:...error:,
	-writeToURL:ofType:error:, -writeToURL:...error:,
	-printOperationWithSettings:error:): Set error to nil.  
	Patches by Wolfgang Lux <wolfgang.lux@gmail.com>.
	
2007-09-04 Fred Kiefer <FredKiefer@gmx.de>
	
	* Source/NSActionCell.m (-objectValue, -attributedStringValue):