@@ -1,3 +1,11 @@
+2007-09-07 Fred Kiefer <FredKiefer@gmx.de>
+	
+	* Source/NSFontManager.m (-convertFont:toHaveTrait:,
+	-convertFont:toNotHaveTrait:): Handle NSUnboldFontMask and
+	NSUnitalicFontMask correctly.
+	* Source/NSFontManager.m (-fontWithFamily:traits:weight:size:) Be
+	more tolerant with traits set wrongly by backends. 
+
 2007-09-06 Fred Kiefer <FredKiefer@gmx.de>
 	
 	* Headers/AppKit/NSCell.h: Add ivar in_editing, which gets set,
